src/kubernetes/templates/deployment_web_pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <nom_appli>
  namespace: <namespace>
  labels:
    <nom_label_appli> : <label>
spec:
  replicas: <nombre_replicas>
  selector:
    matchLabels:
      <nom_label_appli> : <label>
  template:
    metadata:
      labels:
        <nom_label_appli> : <label>
    spec:
      containers:
      - image: <image_docker_appli_web>
        name: <nom_container>
        ports:
        - containerPort: <port_ecoute_container>
        livenessProbe:
          httpGet:
            path: <page_liveness>
            port: <port_ecoute_container>
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: <page_readyness>
            port: <port_ecoute_container>
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 25Mi
        volumeMounts:
          - mountPath: <chemin_de_montage_dans_le_conteneur>
            name: <nom_volume>
      volumes:
        - name: <nom_volume>
          persistentVolumeClaim:
            claimName: <nom_pv_claim>
